--- a/app/partial/link2.html
+++ b/app/partial/link2.html
@@ -3,7 +3,7 @@
         Size (integer 0 - 10):
         <input type="number" ng-model="size" name="size"
                min="0" max="10" integer />{{size}}<br />
-        <span ng-show="form.size.$error.integer">The value is not a valid integer!</span>
+        <span ng-show="form.size.$error.integerAllen">The value is not a valid integer!</span>
     <span ng-show="form.size.$error.min || form.size.$error.max">
       The value must be in range 0 to 10!</span>
     </div>
